@@ -1,3 +1,10 @@
+Mon Jul  7 19:33:00 BST  2014  Lee Noar  <leenoar@sky.com>
+
+	* signal/post.c(extract_name): Return whether the function name
+	was demangled.
+	(__write_backtrace_thread): Don't output empty brackets for a
+	demangled function name.
+
 Fri Jul  4 18:36:11 BST  2014  Lee Noar  <leenoar@sky.com>
 
 	* include/dlfcn.h: Define RTLD_DEFAULT to be 0.
